Fix show more/less button cutting off elements on smaller screens

--- a/src/static/styles/main.css
+++ b/src/static/styles/main.css
@@ -146,7 +146,7 @@ header .profile {
 
 header .profile > img {
   display: block;
-  width: 45%;
+  width: 40%;
   margin: 1.6em 0;
   border: 10px solid #262d41;
   border-radius: 100%;
@@ -352,8 +352,15 @@ main .portfolio-section:nth-child(odd) {
   .portfolio-section#skills > .container {
     grid-template-columns: repeat(1, 1fr);
     max-height: 50vh;
+    padding-bottom: 3em;
     overflow: hidden;
-    transition: max-height 0.3s ease, padding-bottom 0.15s ease;
+    transition: max-height 0.3s ease-out;
+  }
+}
+
+@media screen and (max-height: 499px) {
+  .portfolio-section#skills > .container {
+    transition: max-height 0.5s ease-out;
   }
 }
 
@@ -398,8 +405,13 @@ main .portfolio-section:nth-child(odd) {
 }
 
 #skills-show-more-toggle:checked ~ .container {
-  padding-bottom: 3em;
   max-height: 200vh;
+}
+
+@media screen and (max-height: 499px) {
+  #skills-show-more-toggle:checked ~ .container {
+    max-height: 400vh;
+  }
 }
 
 /* Skill Lists */
@@ -501,16 +513,28 @@ main .portfolio-section:nth-child(odd) {
 @media screen and (max-width: 767px) {
   .portfolio-section#projects > .container {
     max-height: 80vh;
+    padding-bottom: 3.2em;
     gap: 0.5em;
     overflow: hidden;
-    transition: max-height 0.3s ease, padding-bottom 0.15s ease;
+    transition: max-height 0.4s ease;
+  }
+}
+
+@media screen and (max-height: 499px) {
+  .portfolio-section#skills > .container {
+    transition: max-height 0.6s ease-out;
   }
 }
 
 /* Show More/Less Toggle */
 #projects-show-more-toggle:checked ~ .container {
-  padding-bottom: 3.2em;
   max-height: 240vh;
+}
+
+@media screen and (max-height: 499px) {
+  #projects-show-more-toggle:checked ~ .container {
+    max-height: 480vh;
+  }
 }
 
 /* Project */
